--- a/public/css/fronten.css
+++ b/public/css/fronten.css
@@ -12,6 +12,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 section{
   overflow-x: hidden;
 }
@@ -22,17 +23,10 @@ section{
       background: #007bb6;
   }/* */
 
-/*--------------------------------------------------------------
-# Disable aos animation delay on mobile devices
---------------------------------------------------------------*/
-@media screen and (max-width: 768px) {
-  [data-aos-delay] {
-    transition-delay: 0 !important;
-  }
-}
 
-
-/* Header */
+/*---------------- 
+Header 
+----------------*/
 
 .header {
   --background-color: rgba(0, 0, 0, 0.8);
@@ -61,7 +55,7 @@ section{
   font-size: 32px;
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
   .header .logo {
     order: 1;
   }
@@ -76,20 +70,29 @@ section{
 }
 
 /* Index Page Header
-------------------------------*/
+------------------------------
 .index-page .header {
   --background-color: rgba(0, 0, 0, 0);
 }
 
 /* Index Page Header on Scroll
-------------------------------*/
+------------------------------
 .index-page.scrolled .header {
   --background-color: rgba(0, 0, 0, 0.8);
+} */
+/*--------------------------------------------------------------
+# Disable aos animation delay on mobile devices
+--------------------------------------------------------------*/
+@media screen and (max-width: 768px) {
+  [data-aos-delay] {
+    transition-delay: 0 !important;
+  }
 }
 
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
+
 /* Navmenu - Desktop */
 @media (min-width: 1200px) {
   .navmenu {
@@ -205,7 +208,7 @@ section{
 /* Navmenu -- Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
-    color: #000;
+    color: #fff;
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
@@ -298,6 +301,7 @@ section{
     background-color: rgba(25, 121, 218, 0.714);
   }
 
+  
   .mobile-nav-active {
     overflow: hidden;
   }
@@ -321,6 +325,7 @@ section{
   }
 
   .mobile-nav-active .navmenu>ul {
+    background: #007bb6;
     display: block;
   }
 }
@@ -339,10 +344,10 @@ section{
 --------------------------------------------------------------*/
 .iklan{
   display: block;
-  margin: auto;
-  width: 40%;
-  height: 40%;
-  border-radius: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  border-radius: 30px;
 }
 /* */
 
@@ -557,50 +562,51 @@ section{
 
 /* Daftar kost */
 .tf-section {
+  display: block;
   justify-content: center;
   background-color: #f8f8f8;
 }
-.tf-section .kos-container .swiper-container{
-  display: flex;
-}
-.swiper-wrapper{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 20px;
-}
-.swiper-container .swiper-wrapper {
-  display: flex;
-  width: 100%;
+
+/* .swiper-container .swiper-wrapper {  
+  position: relative;
   padding-top: 20px;
   padding-bottom: 50px;
-  margin: 0px 50px 0px 50px;
 }
-.swiper-slide {
+.swiper-wrapper{
+  display: flex;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 15px;
+} */
+swiper-container {
+  /* width: 100%;
+  height: 100%; */
+  margin: 25px 0px 80px 0px;
+}
+swiper-slide {
+  display: flex;
+  gap: 15px;
   background: #ffffff;
-  display: flex;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  justify-content: center;
+  align-items: center;
 }
-
 .box-dream {
-  display: flex;
+  display: grid;
+  grid-column: auto minmax(0, 1fr);
   flex-direction: column;
   align-items: left;
   padding: 20px;
 }
 
 .box-dream .image img {
+  display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
   border-radius: 5px;
 }
-.image img{
-  position: relative;
-  overflow: hidden;
-  background-position: center;
-  background-size: cover;
-}
+
 .box-dream .content {
   padding: 15px;
   text-align: center;
@@ -627,29 +633,64 @@ section{
   font-size: 0.9rem;
   color: #333;
 }
-
 .icon-box {
   display: flex;
   justify-content: space-around;
   margin-top: 10px;
 }
 
+/* .swiper-button-next {
+  right: 15px; /* Jarak dari sisi kanan 
+}
+.swiper-button-prev {
+  left: 15px; /* Jarak dari sisi kiri 
+} */
+/* .swiper-button-next,
+.swiper-button-prev {     
+  color: #ff5a60;     
+  box-shadow: 0px 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 50%; 
+  background-color: #fff;  
+} */
+/* @media (max-width: 768px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    width: 40px;
+    height: 40px;
+    top: 60%; /* Atur ulang posisi pada layar kecil 
+  }
+  
+  .swiper-pagination {
+    bottom: 10px; /* Dekatkan pagination ke bawah 
+  }
+} */
+/* .swiper-pagination {
+  justify-content: center; /* Memastikan pagination di tengah
+  align-items: center;     /* Menyesuaikan vertikal
+  bottom: 20px;            /* Atur jarak pagination dari bawah
+  position: absolute;      /* Posisi absolut relatif ke container
+  width: 100%;             /* Pastikan selebar slider
+}
 .swiper-pagination-bullet {
+  justify-content: center;
+  align-items: center;    
   background: #ff5a60;
+  width: 12px;         /* Ukuran bullet 
+  height: 12px;        /* Ukuran bullet 
+  margin: 0 5px;
   opacity: 0.8;
 }
-
-.swiper-button-next,
-.swiper-button-prev {
-  color: #ff5a60;
-  padding: 28px;
-  box-shadow: 0px 0 50px 0 rgba(0, 0, 0, 0.1);
-  background-color: #fff, transparent 80%;
-  border-radius: 50%;
-}/* End */
+.swiper-pagination-bullet-active {
+  opacity: 1; /* Perbesar opacity untuk bullet aktif 
+  transform: scale(1.2); /* Buat bullet aktif sedikit lebih besar 
+} */
+/* End */
 
 
 /* About */
+.about{
+  margin-bottom: 10rem;
+}
 .about h3{
   color: #000;
 }/* */
@@ -666,6 +707,7 @@ section{
 }
 
 .accordion-item h2{
+  color: #33353d;
   background-color: #007bb6;
   border: 20px;
   position: relative;
@@ -680,7 +722,7 @@ section{
 } 
 
 .accordion-button{
-  color: #007bb6;
+  color: #33353d;
 }
 
 .accordion-button:hover{
@@ -707,7 +749,9 @@ section{
   display: flex;
 }
 
-/* Footer */
+/*----------------
+ FOOTER 
+----------------*/
 .site-footer
 {
   background-color: #007bb6;
