Maintenance required Pt.10 | kirim Image kosong

--- a/public/css/house.css
+++ b/public/css/house.css
@@ -118,12 +118,6 @@
     display: block;
   }
   
-  body {
-    background: var(--White);
-    line-height: 1;
-    padding: 0 !important;
-  }
-  
   article,
   aside,
   details,
@@ -185,7 +179,13 @@
   box-sizing: border-box;
 }
 
-  body,
+body{
+  background: var(--White);
+  line-height: 1;
+  padding: 0 !important;
+  overflow-y: scroll;
+}
+
   button,
   input,
   select,
@@ -198,8 +198,6 @@
     text-rendering: optimizeLegibility;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
   }
   
   img {
@@ -276,7 +274,6 @@
     padding: 4px 12px;
     background: #f5f5f5;
     border: 1px solid #e0e0e0;
-    overflow-x: auto;
     -webkit-hyphens: none;
     -moz-hyphens: none;
     hyphens: none;
@@ -308,7 +305,12 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   } */
-  
+  .name {
+    color: #000;
+  }
+  .name:hover {
+    color: #007bb6;
+  }
   hr {
     margin-bottom: 20px;
     border: dashed 1px #ccc;
@@ -1178,8 +1180,11 @@ Header
   padding: 20px;
   }
   
-  /* cl-container
+  /* Deskripsi Kost
   -------------------------------------------------------------- */
+  .detail-kos{
+    position: fixed;
+  }
   .content-wrap {
     position: relative;
     margin-left: auto;
@@ -1228,14 +1233,121 @@ Header
     line-height: 24px;
   }
 
-  /* PROPERTY */
-  .property-single-wrap .wrap-gallery-image {
-    margin-bottom: 60px;
-  }
-  .carousel{
+  /* --------
+  PROPERTY -------- */
+  /* .carousel {
     width: 100%;
   }
-  
+  .label-kos-text {
+    font-size: 25px;
+    color: #007bb6;
+    border: #007bb6;
+  } */
+  /* .--swiper-navigation-prev
+  .--swiper-navigation-next {
+    transition: 0.4s ease-out;
+  }
+  .--swiper-slide:not(:hover) .--swiper-button-prev,
+  .--swiper-slide:not(:hover) .--swiper-button-next {
+    opacity: 0;
+  } */
+  .overlay-text {
+    color: #007bb6;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  .overlay-text:hover {
+    color: #000;
+  }
+  .gallery-photo{
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+  .gallery-photo-wrap .carousel-inner {
+    border-radius: 20px 0px 0px 20px;
+  }
+  .gallery-photo-wrap .photo{
+    border-radius: 0px 20px 0px 20px;
+  }
+  .property-single-wrap{
+    margin-bottom: 20px;
+  }
+
+  /*  Swiper Gallery  */
+  swiper-container {
+    width: 80%;
+    height: 50%;
+    margin-bottom: 10px;
+  }
+  swiper-container {
+    display: flex;
+    width: 80%;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    justify-content: center;
+    align-items: center;
+  }
+
+  swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  swiper-slide {
+    background-size: cover;
+    background-position: center;
+  }
+  .mySwiper .mySwiper2{
+    border-radius: 20px;
+    max-width: 100vh;
+  }
+  .mySwiper {
+    width: 90%;
+    height: 50%;
+  }
+
+  .mySwiper2 {
+    width: 90%;
+    height: 20%;
+    box-sizing: border-box;
+    padding: 10px 0;
+  }
+
+  .mySwiper2 swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+  }
+
+  .mySwiper2 .swiper-slide-thumb-active {
+    opacity: 1;
+  }
+  .swiper-navigation:not(:hover) .swiper-navigation-next,
+  .swiper-navigation:not(:hover) .swiper-navigation-prev{
+    opacity: 0;
+  }
+  swiper-slide img {
+    border-radius: 10px;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .swiper-navigation-prev
+  .swiper-navigation-next {
+    transition: 0.4s ease-out;
+}
+  /*  */
+
   .property-single-wrap .head-title {
     display: -webkit-box;
     display: -moz-box;
@@ -1244,7 +1356,7 @@ Header
     display: flex;
     align-items: start;
     justify-content: space-between;
-    margin-bottom: 39px;
+    margin-bottom: 40px;
   }
   .property-single-wrap .head-title h3 {
     margin-top: -9px;
@@ -1360,7 +1472,7 @@ Header
   .property-single-wrap .content-wrap .attachments h4 {
     margin-bottom: 32px;
   }
-  .property-single-wrap .content-wrap .details {
+  .property-single-wrap .content-wrap {
     margin-bottom: 73px;
   }
   .property-single-wrap .content-wrap {
