--- a/public/css/detailhouse.css
+++ b/public/css/detailhouse.css
@@ -366,7 +366,7 @@ ul.breadcrumbs {
 padding: 20px;
 }
 
-/*  */
+/* Search */
 .search-bar {
   display: flex;
   padding: 20px;
@@ -399,33 +399,70 @@ outline-color: #000;
 border: 5px;
 }
 
-.property-banner{
-  position: relative;
-  background-color: #f4f4f4;
-  padding: 20px;
-}
-.property-list {
-  /* display: flex;
-  flex-wrap: wrap; */
-  gap: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  overflow: hidden;
-  padding: 24px;
+/* List View Kos */
+.list-view .property-list {
+  display: flex;
+  flex: 0 0 100%;
+  margin: 0;
 }
 
-.property-card {
-    flex: 1 1 calc(33.333% - 20px); /* Tiga card per baris */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    overflow: hidden;
-    background: #fff;
+.list-view .property-card {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.list-view .property-card .image {
+  flex: 0 0 30%;
+  height: auto;
+}
+
+.list-view .property-card .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.list-view .property-card .property-info {
+  display: flex;
+  flex: 1;
+  padding: 15px;
+  flex-direction: column;
+  justify-content: center;
+}
+/* Card kos */
+.property-banner{
+  background-color: #F6F5F2;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.property-list .property-card:hover{
+  transform: translateY(-10px);
+  transition: 0.5s;
+  } 
+
+.property-list {
+  display: block;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  padding: 24px;
+  transition: all 0.3s ease;
+}
+.property-list .property-card {
+  background: #fff;
+  box-shadow: 2px 2px 18px rgb(14 52 54 / 15%);
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 
 .property-card .image img {
   width: 100%;
-  height: auto;
+  height: 200px;
   padding: 20px;
   border-radius: 25px;
 }
@@ -460,14 +497,6 @@ border: 5px;
   justify-content: space-around;
   margin-top: 10px;
 }
-
-/* .property-info p {
-  display: flex;
-  justify-content: space-around;
-  font-size: 14px;
-  color: #333;
-  margin: 15px 0px 20px 0;
-} */
 /* */
 
 /*----------------
