--- a/public/css/fronten.css
+++ b/public/css/fronten.css
@@ -17,11 +17,20 @@ section{
   overflow-x: hidden;
 }
 
-/* Style */
+/* --------------------
+ Style ---------------------------------- */
   .btn-primary {
       color: #f5efff;
       background: #007bb6;
-  }/* */
+  }
+  h1, h2{
+    /* justify-content: center; */
+    color: #000;
+  }
+  p {
+    margin-bottom: 20px;
+  }
+/* */
 
 
 /*---------------- 
@@ -352,20 +361,25 @@ Header
 /* */
 
 /* explanation */
+
+.explanation-title{
+  text-align: center;
+  margin-bottom: 20px;
+}
 .explanation {
+  display: flex;
   width: 100%;
   min-height: 100vh;
   position: relative;
   padding: 80px 0;
   clip-path: inset(0);
-  display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 0px 0px 40px 40px;
 }
 
 .explanation img {
-  position: absolute;
+  position: fixed;
   inset: 0;
   display: block;
   width: 100%;
@@ -389,7 +403,7 @@ Header
 }
 
 .explanation .container h3{
-  background: color-mix(in srgb, #f4f4f4, transparent 60%);
+  background: color-mix(in srgb, #E5E3D4, transparent 85%);
   color: #007bb6;
   display: inline-block;
   text-transform: uppercase;
@@ -412,6 +426,7 @@ Header
 
 /* Section title everywhere */
 .section-title {
+  justify-content: center;
   margin-top: 50px;
   text-align: center;
   padding-bottom: 60px;
@@ -445,7 +460,7 @@ Header
 
 /* Start Service */
 .sc{
-  margin-bottom: 60px;
+  margin-bottom: 150px;
 }
 
 .services .service-item {
@@ -477,13 +492,13 @@ Header
   transition: ease-in-out 0.3s;
 }
 
-.services .service-item h4 {
-  font-weight: 700;
+.services .service-item h2 {
+  font-weight: 900;
   margin-bottom: 15px;
   font-size: 20px;
 }
 
-.services .service-item h4 a {
+.services .service-item h2 a {
   color: #007bb6;
   transition: ease-in-out 0.3s;
 }
@@ -495,7 +510,7 @@ Header
   transition: ease-in-out 0.3s;
 }
 
-.services .service-item:hover h4 a,
+.services .service-item:hover h2 a,
 .services .service-item:hover .icon i,
 .services .service-item:hover p {
   color: #000;
@@ -577,6 +592,29 @@ Header
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 15px;
 } */
+/* .swiper-button-prev {
+  right: 40px;
+}
+.swiper-button-next {
+  left: 40px;
+} */
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination {
+  transition: 0.4s ease-out;
+}
+/* .swiper-container:not(:hover) .swiper-button-prev,
+.swiper-container:not(:hover) .swiper-button-next,
+.swiper-container:not(:hover) .swiper-pagination {
+  opacity: 0;
+} */
+&:not(:hover) {
+  .swiper-button-prev,
+  .swiper-button-next,
+  .swiper-pagination {
+    opacity: 0;
+  }
+}
 swiper-container {
   /* width: 100%;
   height: 100%; */
