--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -1,5 +1,6 @@
 :root {
-    --White: #6C7293;
+    --Default: #fff;
+    --White: #ced4da;
     --Dark: #000;
     --Primary: #417bbf;
     --Secondary: #191C24;
@@ -9,23 +10,63 @@
 body {
     overflow-y: scroll;
     background-color: var(--Dark);
+    font-family: sans-serif;
 }
 
+/* 
+--------------- 
+Element 
+---------------*/
+.link-button a{
+    color: var(--Primary);
+    text-decoration: underline;
+    font-weight: 600;
+    text-decoration: none;
+}
+.link-button a:hover{
+    text-decoration: underline;
+}
 h2 {
-    color: var(--Text);
     text-align: center;
+    font-size: 25px;
+    text-transform: capitalize;
 }
 
+.form-control{
+    display: block;
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: var(--Secondary);
+    background-color: var(--Default);
+    border: 3px solid var(--White);
+}
+.form-control:focus {
+    background-color: var(--Default);
+    border-color: var(--Primary);
+}
+
+.btn {
+    padding: 5px 100px;
+    font-weight: bold;
+    font-family: sans-serif;
+    background-color: var(--Primary);
+}
+/*  */
+
+/*--------------- 
+Card 
+---------------*/
 .card{
-    background-color: var(--Secondary);
-    max-width: 500px;
-    margin: 10px;
+    background-color: var(--Text);
+}
+
+.card, .card-body{
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-body {
-    padding: 100px;
-}
-
-form {
-    justify-content: center;
+    flex: 1 1 auto;
+    padding: 25px 25px;
 }
