--- a/public/css/house/house.css
+++ b/public/css/house/house.css
@@ -1,11 +1,14 @@
 :root {
-    --White: #fff;
-    --Text: #3D3E3F;
-    --Primary: #006bb6;
-    --Secondary: #1A1A1A;
-    --Third: #EB664E;
-    --Fourth: #1F4B43;
-    --Border: #EBEBEB;
+  --Default: #f9f9f9;
+  --White: #fff;
+  --Gray-light: #ced4da;
+  --Background: #0f1531;
+  --Text: #3D3E3F;
+  --Primary: #007bb6;
+  --Primary-2: #006bb6;
+  --Secondary: #1A1A1A;
+  --Third: #EB664E;
+  --Border: #EBEBEB;
   }
   
   
@@ -292,19 +295,6 @@ body{
   
   /* Elements
   -------------------------------------------------------------- */
-  /* html {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  *,
-  *:before,
-  *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  } */
   .name {
     color: #000;
   }
@@ -395,6 +385,23 @@ body{
   th,
   td {
     padding: 8px 12px;
+  }
+
+  a {
+    text-decoration: none;
+    color: var(--Secondary);
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  .title{
+    color: var(--Primary);
+  }
+  .price{
+    color: var(--Third) !important;
+    /* #ff5a60 */
   }
   
   /* Placeholder color */
@@ -801,44 +808,11 @@ body{
     background-color: #F9F9F9;
   }
   
-  /* ELEMENT
-  -------------------------------------------------------------- */
-  a {
-    text-decoration: none;
-    color: var(--Secondary);
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-  }
-  /* a:hover, a:focus {
-    color: var(--White) !important;
-    text-decoration: none;
-    outline: 0;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-  } */
-.title{
-  color: #006bb6;
-}
-.price{
-  color: #ff5a60 !important;
-}
-
-/*---------------- 
-Header 
-----------------*/
-
-.header {
-  --background-color: rgba(0, 0, 0, 0.8);
-  --heading-color: #ffffff;
-  --contrast-color: #ffffff;
-  color: #ffffff;
-  background-color: #007cb6;
+/* Header menu
+--------------------------------------------------------------*/
+.header { 
+  color: var(--White);
+  background-color: var(--Primary);
   padding: 10px 0;
   transition: all 0.5s;
   z-index: 997;
@@ -852,11 +826,11 @@ Header
   font-size: 32px;
   margin: 0;
   font-weight: 700;
-  color: #ffffff;
+  color: var(--White);
 }
 
 .header .logo span {
-  color: #f4f4f4;
+  color: var(--Default);
   font-size: 32px;
 }
 /*--------------------------------------------------------------
@@ -868,8 +842,7 @@ Header
   }
 }
 
-/*--------------------------------------------------------------
-# Navigation Menu
+/* Navigation Menu
 --------------------------------------------------------------*/
 
 /* Navmenu - Desktop */
@@ -897,7 +870,7 @@ Header
   .navmenu a,
   .navmenu a:focus {
     text-decoration: none;
-    color: #f4f4f4;
+    color: var(--Default);
     padding: 18px 15px;
     font-size: 16px;
     font-weight: 400;
@@ -923,13 +896,13 @@ Header
   .navmenu li:hover>a,
   .navmenu .active,
   .navmenu .active:focus {
-    color: #000;
+    color: var(--Gray-light);
   }
 
   .navmenu .dropdown ul {
     margin: 0;
     padding: 10px 0;
-    background: #f4f4f4;
+    background: var(--Default);
     display: block;
     position: absolute;
     visibility: hidden;
@@ -950,7 +923,7 @@ Header
     padding: 10px 20px;
     font-size: 15px;
     text-transform: none;
-    color: #f4f4f4;
+    color: var(--Default);
   }
 
   .navmenu .dropdown ul a i {
@@ -960,7 +933,7 @@ Header
   .navmenu .dropdown ul a:hover,
   .navmenu .dropdown ul .active:hover,
   .navmenu .dropdown ul li:hover>a {
-    background-color: #000000;
+    background-color: var(--Secondary);
   }
 
   .navmenu .dropdown:hover>ul {
@@ -982,12 +955,12 @@ Header
     visibility: visible;
   }
 }
-/* END */
+/* - */
 
-/* Navmenu -- Mobile */
+/* Navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
-    color: #fff;
+    color: var(--White);
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
@@ -1008,7 +981,7 @@ Header
     padding: 20px 0;
     margin: 0;
     border-radius: 6px;
-    background-color: #000000;
+    background-color: var(--Background);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -1017,7 +990,7 @@ Header
 
   .navmenu a,
   .navmenu a:focus {
-    color: #f4f4f4;
+    color: var(--Default);
     padding: 10px 20px;
     font-size: 17px;
     font-weight: 500;
@@ -1040,7 +1013,7 @@ Header
     justify-content: center;
     border-radius: 50%;
     transition: 0.3s;
-    background-color: white 90%;
+    background-color: var(--White) 90%;
   }
 
   .navmenu a i:hover,
@@ -1051,7 +1024,7 @@ Header
   .navmenu a:hover,
   .navmenu .active,
   .navmenu .active:focus {
-    background-color: #000;
+    background-color: var(--Background);
   }
 
   .navmenu .active i,
@@ -1065,7 +1038,7 @@ Header
     z-index: 99;
     padding: 10px 0;
     margin: 10px 20px;
-    background-color: #006bb6;
+    background-color: var(--Primary);
     border: 1px solid color-mix( srgb, (25, 121, 218, 0.714), transparent 90%);
     box-shadow: none;
     transition: all 0.5s ease-in-out;
@@ -1080,13 +1053,12 @@ Header
     background-color: rgba(25, 121, 218, 0.714);
   }
 
-  
   .mobile-nav-active {
     overflow: hidden;
   }
 
   .mobile-nav-active .mobile-nav-toggle {
-    color: #fff;
+    color: var(--White);
     position: absolute;
     font-size: 32px;
     top: 15px;
@@ -1104,7 +1076,7 @@ Header
   }
 
   .mobile-nav-active .navmenu>ul {
-    background: #006bb6;
+    background: var(--Primary);
     display: block;
   }
 }
@@ -1118,7 +1090,7 @@ Header
   }
 }/* */
 
-  /* Header
+  /* Header overlay
   -------------------------------------------------------------- */ 
   .header-top {
     background-color: rgba(0, 0, 0, 0.5);
@@ -1139,7 +1111,7 @@ Header
   }
   .property-title {
     font-size: 2.5em;
-    color: #ffffff;
+    color: var(--White);
     text-align: center;
     font-weight: bold;
     margin: 100px 0px 20px 0px;
@@ -1151,13 +1123,17 @@ Header
   
   ul.breadcrumbs {
     display: flex;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
     gap: 5px;
   }
   .breadcrumbs a {
     color: #ffffff;
+    text-decoration: none;
   }
   .breadcrumbs a:hover {
-    color: #006bb6;
+    color: var(--Primary-2);
   }
   
   ul.breadcrumbs li {
@@ -1167,7 +1143,7 @@ Header
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    color: #ffffff;
+    color: var(--White);
   }
   ul.breadcrumbs .style-1 li {
     font-weight: 400;
@@ -1179,8 +1155,152 @@ Header
   .list-house{
   padding: 20px;
   }
+
+  /* Deskripsi Kost - Index
+  -------------------------------------------------------------- */
+  .list-house1 {
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .list-house1 .container{
+    display: flex;
+    box-shadow: 0px 0px 20px 11px rgba(0, 0, 0, 0.09);
+    background-color: var(--White);
+    border-radius: 5px;
+    width: 80%;
+  }
+  .search-bar {
+    padding: 20px;
+    background-color: var(--White);
+    border-radius: 10px;
+    margin-bottom: 30px;
+  }
   
-  /* Deskripsi Kost
+  .search-bar input, .search-bar select {
+    width: 30%;
+    padding: 10px;
+    border: 1px solid var(--Gray-light);
+  }
+  
+  .search-button {
+    text-transform: uppercase;
+    background: var(--Primary);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    color: var(--White);
+    cursor: pointer;
+  }
+  .search-button:hover {
+  background: var(--Primary-2);
+  outline-style: solid;
+  outline-color: var(--Border);
+  color: var(--Default);
+  border: 1px;
+  }
+  
+  /* List View Kos */
+  .list-house2{
+    padding: 20px;
+    }
+  .list-view .property-list {
+    display: flex;
+    flex: 0 0 100%;
+    margin: 0;
+  }
+  
+  .list-view .property-card {
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    border: 1px solid var(--Border);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .list-view .property-card .image {
+    flex: 0 0 30%;
+    height: auto;
+  }
+  
+  .list-view .property-card .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .list-view .property-card .property-info {
+    display: flex;
+    flex: 1;
+    padding: 15px;
+    flex-direction: column;
+    justify-content: center;
+  }
+  /* Card kos */
+  .property-banner{
+    background-color: var(--Gray-light);
+    border-radius: 5px;
+  }
+  
+  .property-list .property-card:hover{
+    transform: translateY(-10px);
+    transition: 0.5s;
+    } 
+  
+  .property-list {
+    display: block;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    padding: 24px;
+    transition: all 0.3s ease;
+  }
+  .property-list .property-card {
+    background: #fff;
+    box-shadow: 2px 2px 18px rgb(14 52 54 / 15%);
+    border: 1px solid var(--Border);
+    border-radius: 0.5rem;
+    overflow: hidden;
+  }
+  
+  .property-card .image img {
+    width: 100%;
+    height: 200px;
+    padding: 20px;
+    border-radius: 25px;
+  }
+  .property-info {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 25px;
+  }
+  .property-head{
+    font-weight: 700;
+  }
+  .property-head a{
+    text-align: center;
+    color: var(--Primary);
+  }
+  .property-info .price {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #ff5a60;
+  }
+  .property-info .location, 
+  .icon-box .item{
+    font-size: 0.9rem;
+    color: var(--Secondary);
+    margin-bottom: 10px;
+  }
+  .location{
+    margin-top: 10px;
+  }
+  .icon-box {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+  }
+
+  /* Deskripsi Kost - Show
   -------------------------------------------------------------- */
   .detail-kos{
     position: fixed;
@@ -1209,7 +1329,7 @@ Header
     width: 1828px;
   }
   .content-wrap .head-title .title{
-    color: #006bb6;
+    color: var(--Primary);
   }
 
   .head-title {
@@ -1218,9 +1338,7 @@ Header
     gap: 15px; 
     align-items: flex-start; 
     padding: 10px;
-    /* background-color: #fdfeff;  */
     border-radius: 8px; 
-    /* box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2); */
 }
 
 .property-single-wrap .head-title {
@@ -1283,31 +1401,10 @@ Header
   }
 }
 
-  /* --------
-  PROPERTY -------- */
+  /* PROPERTY 
+  --------------------------------------------------------------*/
   /* .carousel {
     width: 100%;
-  }
-  .label-kos-text {
-    font-size: 25px;
-    color: #006bb6;
-    border: #006bb6;
-  } */
-  /* .--swiper-navigation-prev
-  .--swiper-navigation-next {
-    transition: 0.4s ease-out;
-  }
-  .--swiper-slide:not(:hover) .--swiper-button-prev,
-  .--swiper-slide:not(:hover) .--swiper-button-next {
-    opacity: 0;
-  } */
-  /* .overlay-text {
-    color: #006bb6;
-    font-weight: bold;
-    font-size: 14px;
-  }
-  .overlay-text:hover {
-    color: #000;
   } */
   .gallery-photo{
     justify-content: center;
@@ -1328,7 +1425,7 @@ Header
 
 /* Blur efek dan overlay teks */
 .position-relative .blur-effect {
-  filter: blur(2px); /* Efek blur */
+  filter: blur(2px);
   transition: filter 0.3s ease, transform 0.3s ease-in-out;
 }
 
@@ -1341,14 +1438,8 @@ Header
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-shadow: 0px 4px 4px #000;
-  text-decoration-color: #006bb6;
-  /* padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 1rem;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  pointer-events: none; */
+  text-shadow: 0px 4px 4px var(--Background);
+  text-decoration-color: var(--Primary); 
 }
 
 .position-relative:hover .blur-effect {
@@ -1365,11 +1456,11 @@ Header
 @media (max-width: 768px) {
   .thumb {
       height: auto;
-      width: 100%; /* Pastikan thumbnail memenuhi lebar container */
+      width: 100%; 
   }
 
   .overlay-text p {
-      font-size: 0.9rem; /* Ukuran font lebih kecil untuk mobile */
+      font-size: 0.9rem;
   }
 }
 
@@ -1473,7 +1564,7 @@ Header
     height: 60px;
     padding: 20px;
     border-radius: 8px;
-    background-color: #F9F9F9;
+    background-color: var(--Default);
   }
   .property-single-wrap .content-wrap .box-items .item .icon i {
     font-size: 20px;
@@ -1561,7 +1652,7 @@ Header
     color: var(--Secondary);
   }
   .property-single-wrap .content-wrap ul li:nth-child(2n+2) {
-    background-color: #F9F9F9;
+    background-color: var(--Default);
   }
   .property-single-wrap .content-wrap .features {
     margin-bottom: 67px;
@@ -1579,16 +1670,15 @@ Header
     margin-bottom: 16px;
   }
 
-  /*----------------
- FOOTER 
-----------------*/
+  /* FOOTER 
+--------------------------------------------------------------*/
 .site-footer
 {
-  background-color: #006bb6;
+  background-color: var(--Primary);
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
-  color:#f4f4f4;
+  color: var(--Default);
   margin-top: 100px;
 }
 .site-footer hr
@@ -1610,12 +1700,12 @@ Header
 }
 .site-footer p, a, .footer-links a, .copyright-text a
 {
-  color:#f4f4f4;
+  color:var(--Default);
   text-decoration: none !important;
 }
 .site-footer a:hover
 {
-  color:#000;
+  color:var(--Gray-light);
 }
 .footer-links
 {
@@ -1628,7 +1718,7 @@ Header
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color:#000;
+  color:var(--Gray-light);
   text-decoration:none;
 }
 .footer-links.inline li
@@ -1647,7 +1737,7 @@ Header
   margin-left:6px;
   margin-right:0;
   border-radius:100%;
-  background-color:#33353d
+  background-color:var(--Default)
 }
 .copyright-text
 {
@@ -1691,7 +1781,7 @@ Header
   font-size:13px
 }
 .social-icons a{
-  color: #f4f4f4;
+  color: var(--Background);
   font-size:16px;
   display:inline-block;
   line-height:44px;
@@ -1706,7 +1796,7 @@ Header
 }
 .social-icons a:active,.social-icons a:focus,.social-icons a:hover
 {
-  color:#fff;
+  color:var(--Background);
 }
 .social-icons.size-sm a
 {
