--- a/public/css/admin/admin.css
+++ b/public/css/admin/admin.css
@@ -1,6 +1,7 @@
 :root {
-    --Default: #fff;
+    --Default: #f9f9f9;
     --White: #ced4da;
+    --gray: #6C7293;
     --Dark: #000;
     --Primary: #417bbf;
     --Secondary: #191C24;
@@ -25,6 +26,15 @@ Element
 }
 .link-button a:hover{
     text-decoration: underline;
+}
+p {
+    color: var(--Default);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+h1, h2, h3, h4, h5, h6 {
+    color: var(--Default);
 }
 h2 {
     text-align: center;
@@ -52,6 +62,254 @@ h2 {
     background-color: var(--Primary);
 }
 /*  */
+
+/*--------------- 
+Table 
+---------------*/
+/* Sidebar */
+.navbar-brand h3 {
+color: var(--Primary);
+}
+.sidebar {
+position: fixed;
+top: 0;
+left: 0;
+bottom: 0;
+width: 250px !important;
+height: 100vh !important;
+background: var(--Secondary);
+transition: 0.5s;
+z-index: 999;
+}
+
+.content {
+    margin-left: 250px;
+    min-height: 100vh;
+    background: var(--Dark);
+    transition: 0.5s;
+}
+
+@media (min-width: 992px) {
+    .sidebar {
+        margin-left: 0;
+    }
+
+    .sidebar.open {
+        margin-left: -250px;
+    }
+
+    .content {
+        width: calc(100% - 250px);
+    }
+
+    .content.open {
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .sidebar {
+        margin-left: -250px;
+    }
+
+    .sidebar.open {
+        margin-left: 0;
+    }
+
+    .content {
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+
+/*** Navbar ***/
+.sidebar .navbar .navbar-nav .nav-link {
+    padding: 7px 25px;
+    color: var(--gray);
+    font-weight: 500;
+    border-left: 3px solid var(--gray);
+    border-radius: 0 30px 30px 0;
+    outline: none;
+}
+
+.sidebar .navbar .navbar-nav .nav-link:hover,
+.sidebar .navbar .navbar-nav .nav-link.active {
+    color: var(--Primary);
+    background: var(--Secondary);
+    border-color: var(--Primary);
+}
+
+.sidebar .navbar .navbar-nav .nav-link i {
+    width: 30px;
+    height: 35px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--Dark);
+    border-radius: 40px;
+}
+
+.sidebar .navbar .navbar-nav .nav-link:hover i,
+.sidebar .navbar .navbar-nav .nav-link.active i {
+    background: var(--Secondary);
+}
+
+.sidebar .navbar .dropdown-toggle::after {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    border: none;
+    content: "\f107";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    transition: .5s;
+}
+
+.sidebar .navbar .dropdown-toggle[aria-expanded=true]::after {
+    transform: rotate(-180deg);
+}
+
+.sidebar .navbar .dropdown-item {
+    padding-left: 25px;
+    border-radius: 0 30px 30px 0;
+    color: var(--gray);
+}
+
+.sidebar .navbar .dropdown-item:hover,
+.sidebar .navbar .dropdown-item.active {
+    background: var(--Dark);
+}
+
+.content .navbar .navbar-nav .nav-link {
+    margin-left: 25px;
+    padding: 12px 0;
+    color: var(--gray);
+    outline: none;
+}
+
+.content .navbar .navbar-nav .nav-link:hover,
+.content .navbar .navbar-nav .nav-link.active {
+    color: var(--Primary);
+}
+
+.content .navbar .sidebar-toggler,
+.content .navbar .navbar-nav .nav-link i {
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--Dark);
+    border-radius: 40px;
+}
+
+.content .navbar .dropdown-item {
+    color: var(--gray);
+}
+
+.content .navbar .dropdown-item:hover,
+.content .navbar .dropdown-item.active {
+    background: var(--Dark);
+}
+
+.content .navbar .dropdown-toggle::after {
+    margin-left: 14px;
+    vertical-align: middle;
+    border: none;
+    content: "\f107";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    transition: .5s;
+}
+
+.content .navbar .dropdown-toggle[aria-expanded=true]::after {
+    transform: rotate(-180deg);
+}
+
+@media (max-width: 575.98px) {
+    .content .navbar .navbar-nav .nav-link {
+        margin-left: 15px;
+    }
+}
+
+/* .container-home{
+    width: 100%;
+}
+.container-fluid {
+    margin-left: 19%;
+    width: 80%;
+}*/
+
+/*  */
+.btn-dashboard {
+    width: 100%;
+    height: 100%;
+    font-weight: 90;
+} 
+.background-icon {
+    display: inline-block;
+    opacity: 0.1;
+    font-size: 100px;
+    position: absolute;
+}
+.btn-dashboard p {
+    margin-bottom: 0;
+}
+.p-text {
+    font-size: 40px;
+}
+
+/* filter icon */
+#filterContainer {
+    display: none;
+}
+.show-filter #filterContainer {
+    display: flex;
+}
+
+/* laporan */
+.success-text {
+    color: green;
+}
+
+.danger-text {
+    color: red;
+}
+
+/* tabel */
+.table {
+    background-color: var(--Dark);
+}
+tr:hover{
+    background-color: var(--White);
+}
+#myTable thead td {
+    background-color: var(--secondary);
+    color: var(--White);
+}
+.table-responsive tr th{
+    background-color: var(--secondary); 
+    color: var(--White);
+}
+.table-responsive tr td{
+    background-color: var(--White); 
+    color: var(--gray);
+}
+tr {
+    color: var(--White);
+    border: 4px solid var(--Dark);
+    padding: 8px 10px;
+}
+th[scope='col'] {
+    background-color: var(--Secondary);
+    color: var(--Secondary);
+}
+
+th[scope='row'] {
+color: var(--Dark);
+}
 
 /*--------------- 
 Card 
