--- a/public/css/house/house.css
+++ b/public/css/house/house.css
@@ -1094,7 +1094,7 @@ body{
   -------------------------------------------------------------- */ 
   .header-top {
     background-color: rgba(0, 0, 0, 0.5);
-    background-image: url('/aset/img/house/Gallery house1.jpg');
+    background-image: url('/aset/img/house/Gallery House10.jpg');
     background-size: cover;
     background-position: center;
     height: 300px;
